--- a/Family budget/PresentationLayer/Views/Account/CheckDelete.cshtml
+++ b/Family budget/PresentationLayer/Views/Account/CheckDelete.cshtml
@@ -1,15 +1,10 @@
-﻿@using Family_budget.DataAccessLayer.Entities
-@model Family_budget.PresentationLayer.Models.UserViewModel
+﻿@model Family_budget.PresentationLayer.Models.UserViewModel
 
 @{
-    ViewData["Title"] = "User profile";
+    ViewData["Title"] = "Delete user";
 }
 
-<h1>User profile</h1>
-
-<p>
-    <a asp-action="EditLoginData">Change password or login</a>
-</p>
+<h3>Are you sure you want to delete this user?</h3>
 <div>
     <hr />
     <dl class="row">
@@ -61,41 +56,23 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Role)
         </dd>
-
-        @if (User.IsInRole(UserRole.Admin.ToString()))
-        {
-            <dt class="col-sm-2">
-                @Html.LabelFor(model => model.DateCreated, "Date created")
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.DateCreated)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.LabelFor(model => model.DateUpdated, "Date updated")
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.DateUpdated)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.LabelFor(model => model.PasswordDate, "Password setup Date ")
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.PasswordDate)
-            </dd>
-        }
+        <dt class="col-sm-2">
+            @Html.LabelFor(model => model.DateCreated, "Date created")
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.DateCreated)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.LabelFor(model => model.DateUpdated, "Date updated")
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.DateUpdated)
+        </dd>
     </dl>
-</div>
-<div>
-    @if (User.IsInRole(UserRole.Admin.ToString()))
-    {
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-        <a> | </a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
-    }
-    else
-    {
-        <a asp-action="MyEdit">Edit</a>
-        <a> | </a>
-        <a asp-controller="Home" asp-action="Index">Back to Home</a>
-    }
+    </form>
 </div>
