--- a/Family budget/PresentationLayer/Views/Account/Edit.cshtml
+++ b/Family budget/PresentationLayer/Views/Account/Edit.cshtml
@@ -1,16 +1,23 @@
-﻿@model Family_budget.PresentationLayer.Models.UserViewModel
+﻿@using Family_budget.DataAccessLayer.Entities
+@model Family_budget.PresentationLayer.Models.UserViewModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "User profile edit";
 }
 
-<h1>Registration</h1>
+<h1>User profile edit</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" asp-action="Register" asp-anti-forgery="true">
+        <form method="post" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="PasswordDate" />
+            <input type="hidden" asp-for="PreviousPasswords" />
+            <input type="hidden" asp-for="DateCreated" />
+            <input type="hidden" asp-for="DateUpdated" />
+            <input type="hidden" asp-for="Login" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -22,23 +29,8 @@
                 <span asp-validation-for="Surname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Login" class="control-label"></label>
-                <input asp-for="Login" class="form-control" />
-                <span asp-validation-for="Login" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword" class="control-label">Confirm Password</label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input type="email" asp-for="Email" class="form-control" />
+                <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,24 +39,40 @@
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="City" class="control-label"></label>
-                <input asp-for="City" class="form-control" />
-                <span asp-validation-for="City" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="City" class="control-label"></label>
+                <input asp-for="City" class="form-control" />
+                <span asp-validation-for="City" class="text-danger"></span>
+            </div>
+            @if (User.IsInRole(UserRole.Admin.ToString()))
+            {
+                <div class="form-group">
+                    <label asp-for="Role" class="control-label"></label>
+                    <select asp-for="Role" asp-items="Html.GetEnumSelectList<UserRole>()" class="form-control">
+                    </select>
+                    <span asp-validation-for="Role" class="text-danger"></span>
+                </div>
+            }
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Login">Back to Login</a>
+    @if (User.IsInRole(UserRole.Admin.ToString()))
+    {
+        <a asp-action="Index">Back to List</a>
+    }
+    else
+    {
+        <a asp-controller="Home" asp-action="Index">Back to Home</a>
+    }
 </div>
 
 @section Scripts {
