--- a/Family budget/PresentationLayer/Views/Account/Index.cshtml
+++ b/Family budget/PresentationLayer/Views/Account/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Family_budget.PresentationLayer.Models.UserViewModel>
 
 @{
-    ViewData["Title"] = "User list";
+    ViewData["Title"] = "Users list";
 }
 
-<h1>User list</h1>
+<h1>Users list</h1>
 
 <table class="table">
     <thead>
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                Phone Number
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Address)
@@ -66,7 +66,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="CheckDelete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
