--- a/Family budget/PresentationLayer/Views/Expense/GetIndex.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/GetIndex.cshtml
@@ -9,7 +9,9 @@
         <form asp-action="Index">
 
             <div class="form-group">
-                <select name="memberId" asp-items=ViewBag.Category class="form-control"></select>
+                <select name="memberId" asp-items=ViewBag.Category class="form-control">
+                    <option selected="selected" value="">Please select</option>
+                </select>
             </div>
 
             <div class="form-group">
